<resources>
    <string name="app_name">Activity Lifecycle</string>
    <string name="new_app_name">Avengers</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="enter_your_message_here">Enter Your Message Here</string>
    <string name="send">Send</string>
    <string name="preference_file_name">Avengers Preferences</string>
    <string name="logout">Logout</string>
    <string name="change_pass">Please fill in your Number and Email ID. Check your Email to change your password</string>
    <string name="email_id">Enter Email ID</string>
    <string name="next">Next</string>
    <string name="name">Enter Name</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
</resources>
