<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="240dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/avenger_logo" />

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgLogo"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="15dp"
                android:padding="6dp"
                android:text="@string/change_pass"
                android:textColor="@color/sendbtn"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etMobileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtInfo"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="15dp"
                android:background="@color/yellow"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="6dp"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMobileNumber"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="15dp"
                android:background="@color/yellow"
                android:hint="@string/email_id"
                android:inputType="textEmailAddress"
                android:maxLength="10"
                android:maxLines="1"
                android:padding="6dp"
                android:textColorHint="@color/colorPrimary" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/etEmail"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="15dp"
                android:layout_marginBottom="20dp"
                android:background="@color/myColor"
                android:padding="6dp"
                android:text="@string/next"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:elevation="4dp"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>