<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgTonyStark"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/tony_stark"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tony Stark"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tony@starkindustries.com"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:layout_below="@id/txtName"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 11155555"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgTonyStark"
                android:layout_below="@id/txtEmail"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgSteveRogers"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/captain_america"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/txtNameSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Steve Rogers"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgSteveRogers"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtEmailSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="steve@starkindustries.com"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgSteveRogers"
                android:layout_below="@id/txtNameSteve"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPhoneNumberSteve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 22255555"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgSteveRogers"
                android:layout_below="@id/txtEmailSteve"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgThorOdinson"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/thor"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/txtNameThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Thor Odinson"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgThorOdinson"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtEmailThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="thor@starkindustries.com"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgThorOdinson"
                android:layout_below="@id/txtNameThor"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPhoneNumberThor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 33355555"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgThorOdinson"
                android:layout_below="@id/txtEmailThor"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgHulk"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/hulk"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/txtNameHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dr. Bruce Banner"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgHulk"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtEmailHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="bruce@starkindustries.com"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgHulk"
                android:layout_below="@id/txtNameHulk"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPhoneNumberHulk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 44455555"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgHulk"
                android:layout_below="@id/txtEmailHulk"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBlackPanther"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/black_panther"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/txtNamePanther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="T'Challa"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgBlackPanther"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtEmailPanther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="tchalla@starkindustries.com"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgBlackPanther"
                android:layout_below="@id/txtNamePanther"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPhoneNumberPanther"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 55555555"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgBlackPanther"
                android:layout_below="@id/txtEmailPanther"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent" android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBlackWidow"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/widow"
                android:layout_margin="20dp" />

            <TextView
                android:id="@+id/txtNameWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Natasha Romanov"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgBlackWidow"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtEmailWidow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="natasha@starkindustries.com"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgBlackWidow"
                android:layout_below="@id/txtNameWidow"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

            <TextView
                android:id="@+id/txtPhoneNumberWindow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+91 66655555"
                android:textSize="18sp"
                android:layout_toRightOf="@id/imgBlackWidow"
                android:layout_below="@id/txtEmailWidow"
                android:layout_marginTop="15dp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:hint="@string/enter_your_message_here"
            android:textSize="18sp"
            android:padding="6dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/btnSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/sendbtn"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:padding="6dp"
            android:text="@string/send"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/awesomeColor"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:padding="6dp"
            android:text="@string/logout"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>